syntax = "proto3";

package loak155.techbranch.proto.user;

option go_package = "github.com/loak155/techbranch-backend/proto/user";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}

message User {
  int32 id = 1;
  string username = 2 [(validate.rules).string = {min_len: 6, max_len: 20}];
  string email = 3 [(validate.rules).string.email = true];
  string password = 4 [(validate.rules).string = {min_len: 8, max_len: 30}];
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  User user = 1;
}

message GetUserRequest {
  int32 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1 [(validate.rules).string.email = true];
}

message GetUserByEmailResponse {
  User user = 1;
}

message ListUsersRequest {
}

message ListUsersResponse {
  repeated User users = 1;
}

message UpdateUserRequest {
  User user = 1;
}

message UpdateUserResponse {
  bool success = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}
